Refactor: Simplify comments and enhance readability
Simplified and re-formatted the comments in various sorting algorithm files and tests. No changes to the logic or functionality were made. Comments now follow a more uniform structure, improving readability. This change is purely cosmetic and makes the comments easier to read and understand. Overflow in lines for comments were addressed and formatted appropriately with line breaks.